# quadcopter_from_scratch

./: .gitignore  README.md
.cargo/: config.toml
drivers/: README.md
drivers/icm_20948_driver/: Cargo.toml
drivers/icm_20948_driver/src/: lib.rs  main.rs  spi_core.rs
drivers/icm_20948_driver/src/imu/: accelerometer.rs  gyroscope.rs  mod.rs
drone_pi_ws/.cargo/: config.toml
drone_pi_ws/src/imu_publisher_pkg/: Cargo.toml  README.md  package.xml
drone_pi_ws/src/imu_publisher_pkg/src/: imu_publisher.rs  simple_publisher.rs  simple_subscriber.rs
drone_pi_ws/src/sensor_fusion_pkg/: Cargo.toml
drone_pi_ws/src/sensor_fusion_pkg/src/: orientation_publisher.rs  quaternion_publisher.rs
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/sensor_fusion_pkg/share/sensor_fusion_pkg/: package.dsv  package.ps1  package.sh  package.xml
install/sensor_fusion_pkg/share/sensor_fusion_pkg/hook/: ament_prefix_path.dsv  ament_prefix_path.ps1  ament_prefix_path.sh
install/sensor_fusion_pkg/share/sensor_fusion_pkg/rust/src/: orientation_publisher.rs  quaternion_publisher.rs
log/: latest_build
