[package]
name = "imu_publisher_pkg"
version = "0.1.0"
edition = "2021"

[[bin]]
name="imu_publisher"
path="src/imu_publisher.rs"

[[bin]]
name="simple_publisher"
path="src/simple_publisher.rs"

[[bin]]
name="simple_subscriber"
path="src/simple_subscriber.rs"

[dependencies]
rclrs = "*"
std_msgs = "*"
sensor_msgs = { path = "/home/opq/quadcopter_from_scratch/drone_pi_ws/install/sensor_msgs/share/sensor_msgs/rust" }
builtin_interfaces = { path = "/home/opq/quadcopter_from_scratch/drone_pi_ws/install/builtin_interfaces/share/builtin_interfaces/rust" }
icm20948-driver-rust = { git = "https://github.com/OrlandoQuintana/icm20948-driver-rust" }
embedded-hal = "1.0.0"
linux-embedded-hal = "0.4" # For running on Raspberry Pi
biquad = "0.5"


