[package]
name = "sensor_fusion_pkg"
version = "0.1.0"
edition = "2021"

[[bin]]
name="orientation_publisher"
path="src/orientation_publisher.rs"

[dependencies]
rclrs = "*"
std_msgs = "*"
sensor_msgs = { path = "/home/opq/quadcopter_from_scratch/drone_pi_ws/install/sensor_msgs/share/sensor_msgs/rust" }
geometry_msgs = { path = "/home/opq/quadcopter_from_scratch/drone_pi_ws/install/geometry_msgs/share/geometry_msgs/rust" }
rust-ekf = { git = "https://github.com/OrlandoQuintana/rust-ekf.git" }
